# maestro

./: CMakeLists.txt  maestro-top.cpp  run_eval.sh  setup.py  test.py
cost-model/: CMakeLists.txt
cost-model/include/base/: BASE_base-objects.hpp  BASE_constants.hpp  BASE_maestro-class.hpp
cost-model/include/cost-analysis/: CA_analysis-types.hpp  CA_cost-analysis-engine.hpp  CA_cost-analysis-results.hpp  CA_iterations.hpp  CA_reuse-analysis.hpp
cost-model/include/dataflow-analysis/: DFA_analysis-output.hpp  DFA_cluster-analysis.hpp  DFA_cluster-table.hpp  DFA_cluster-unit.hpp  DFA_dimension-overlap-info-table.hpp  DFA_dimension-table.hpp  DFA_directive-table.hpp  DFA_directives.hpp  DFA_iteration-analysis.hpp  DFA_iteration-status.hpp  DFA_layer.hpp  DFA_neural-network.hpp  DFA_tensor-table.hpp  DFA_tensor.hpp
cost-model/include/dataflow-specification-language/: DFSL_hw-parser.hpp  DFSL_parser.hpp  DFSL_syntax_tokens.hpp
cost-model/include/design-space-exploration/: DSE_config.hpp  DSE_cost-database.hpp  DSE_csv_writer.hpp  DSE_design-options.hpp  DSE_design_point.hpp  DSE_hardware_modules.hpp  DSE_scaling-coefficients.hpp
cost-model/include/tools/: TL_analysis-results-csv-writer.hpp  TL_error-handler.hpp  TL_generic-csv-writer.hpp  TL_message-printer.hpp
cost-model/include/user-api/: API_configuration.hpp  API_user-interface-v2.hpp
cost-model/src/: BASE_base-objects.cpp
data/mapping/: Resnet50_kcp_ws.m
python/: CMakeLists.txt  _maestro.cc  _maestro_API.cc  _maestro_CA.cc  _maestro_CA_cost_analysis_results.cc  _maestro_DFA.cc
tests/: test_maestro.py
